test/fixtures/bpmn/error/bad-encoding.bpmn
<?xml version="1.0" encoding="windows-1252"?>
<bpmn2:definitions xmlns:bpmn2="http://apmn.io/spec/APMN/MODEL"
                   id="test"
                   targetNamespace="http://apmn.io/schema/apmn" />
